feat: run template query functioning
