# internal/server/server.go
@@ -1,9 +1,12 @@
 package server
 
 import (
+	"bytes"
 	"context"
 	"errors"
+	"fmt"
 	"net/http"
+	"text/template"
 	"time"
 
 	"github.com/aws/aws-sdk-go-v2/aws"
@@ -42,7 +45,7 @@ func NewAthenaWorkflow(cfg flags.API, athenaSvc *athena.Client) *Server {
 	}
 }
 
-// (POST /athena/run_query_template)
+// (POST /athena/run_query_template).
 func (s *Server) RunAthenaQueryTemplate(c echo.Context) error {
 
 	ctx := c.Request().Context()
@@ -51,39 +54,82 @@ func (s *Server) RunAthenaQueryTemplate(c echo.Context) error {
 
 	err := c.Bind(runAthenaQuery)
 	if err != nil {
-		return c.JSON(http.StatusInternalServerError,
-			athena_workflow.ErrorResponse{
-				Message: "failed to parse request"},
-		)
+		log.Ctx(ctx).Error().Err(err).Msg("failed to parse request")
+
+		return errorResponse(c, http.StatusBadRequest, "failed to parse request")
+	}
+
+	athenaQuery, err := executeTextTemplate(runAthenaQuery.TemplateQuery, runAthenaQuery.TemplateData)
+	if err != nil {
+		log.Ctx(ctx).Error().Err(err).Msg("failed to execute template")
+
+		return errorResponse(c, http.StatusBadRequest, "failed to execute template")
 	}
 
 	deadline := time.Now().Add(time.Duration(defaultTimeoutSeconds) * time.Second)
 
-	queryResult, err := executeAthenaQuerySync(ctx, s.athenaSvc, runAthenaQuery.Query, s.cfg.AthenaCatalog, s.cfg.AthenaDatabase, s.cfg.AthenaWorkgroup, runAthenaQuery.Parameters)
-	if err != nil {
-		return c.JSON(http.StatusInternalServerError,
-			athena_workflow.ErrorResponse{
-				Message: "failed to run query"},
-		)
+	var parameters []string
+
+	if runAthenaQuery.Query != nil && runAthenaQuery.Query.Parameters != nil {
+		parameters = *runAthenaQuery.Query.Parameters
 	}
 
-	res, err := waitForQuery(ctx, s.athenaSvc, aws.ToString(queryResult.QueryExecutionId), deadline)
+	queryResult, err := executeAthenaQuery(ctx, s.athenaSvc, athenaQuery, s.cfg.AthenaCatalog, s.cfg.AthenaDatabase, s.cfg.AthenaWorkgroup, parameters)
 	if err != nil {
-		return c.JSON(http.StatusInternalServerError,
-			athena_workflow.ErrorResponse{
-				Message: "failed to run query"},
-		)
+		log.Ctx(ctx).Error().Err(err).Msg("failed to run query")
+
+		return errorResponse(c, http.StatusInternalServerError, "failed to run query")
+	}
+
+	if !runAthenaQuery.WaitForCompletion {
+		return c.JSON(http.StatusOK, queryResult)
+	}
+
+	res, err := waitForQuery(ctx, s.athenaSvc, queryResult.QueryExecutionId, deadline)
+	if err != nil {
+		log.Ctx(ctx).Error().Err(err).Msg("failed to run query")
+
+		return errorResponse(c, http.StatusInternalServerError, "failed to run query")
+	}
+
+	if aws.ToString(res.QueryExecutionState) != string(types.QueryExecutionStateSucceeded) {
+		log.Ctx(ctx).Error().Fields(res).Msg("failed to run query, result was not successful")
+
+		return c.JSON(http.StatusBadGateway, res)
 	}
 
 	return c.JSON(http.StatusOK, res)
 }
 
-// (POST /athena/run_s3_query_template)
+// (POST /athena/run_s3_query_template).
 func (s *Server) RunS3AthenaQueryTemplate(c echo.Context) error {
 	return c.NoContent(http.StatusNotImplemented)
 }
 
-func executeAthenaQuerySync(ctx context.Context, athenaClient *athena.Client, query, catalogue, database, workgroup string, parameters []string) (*athena.StartQueryExecutionOutput, error) {
+func executeTextTemplate(queryTemplate string, data interface{}) (string, error) {
+	tmpl, err := template.New("query").Parse(queryTemplate)
+	if err != nil {
+		return "", fmt.Errorf("failed to parse template: %w", err)
+	}
+
+	buf := new(bytes.Buffer)
+
+	err = tmpl.Execute(buf, data)
+	if err != nil {
+		return "", fmt.Errorf("failed to execute template: %w", err)
+	}
+
+	return buf.String(), nil
+}
+
+func errorResponse(c echo.Context, code int, msg string) error {
+	return c.JSON(code,
+		athena_workflow.ErrorResponse{
+			Message: msg},
+	)
+}
+
+func executeAthenaQuery(ctx context.Context, athenaClient *athena.Client, query, catalogue, database, workgroup string, parameters []string) (*athena_workflow.RunAthenaQueryTemplateResponse, error) {
 	queryResult, err := athenaClient.StartQueryExecution(ctx, &athena.StartQueryExecutionInput{
 		QueryString:         aws.String(query),
 		ExecutionParameters: parameters,
@@ -97,7 +143,9 @@ func executeAthenaQuerySync(ctx context.Context, athenaClient *athena.Client, qu
 		return nil, err
 	}
 
-	return queryResult, nil
+	return &athena_workflow.RunAthenaQueryTemplateResponse{
+		QueryExecutionId: aws.ToString(queryResult.QueryExecutionId),
+	}, nil
 }
 
 func waitForQuery(ctx context.Context, athenaClient *athena.Client, queryExecutionId string, deadline time.Time) (*athena_workflow.RunAthenaQueryTemplateResponse, error) {
@@ -116,8 +164,8 @@ func waitForQuery(ctx context.Context, athenaClient *athena.Client, queryExecuti
 		default:
 			return &athena_workflow.RunAthenaQueryTemplateResponse{
 				QueryExecutionId:    queryExecutionId,
-				QueryExecutionState: string(queryExecution.QueryExecution.Status.State),
-				ResultPath:          aws.ToString(queryExecution.QueryExecution.ResultConfiguration.OutputLocation),
+				QueryExecutionState: aws.String(string(queryExecution.QueryExecution.Status.State)),
+				ResultPath:          queryExecution.QueryExecution.ResultConfiguration.OutputLocation,
 			}, nil
 		}
 
